[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["Hugo Setyadji <setyadjih@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
